--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ SENTRY_EVENT_RETENTION_DAYS=90
 SENTRY_BIND=9000
 # Set SENTRY_MAIL_HOST to a valid FQDN (host/domain name) to be able to send emails!
 # SENTRY_MAIL_HOST=example.com
-SENTRY_IMAGE=getsentry/sentry:nightly
-SNUBA_IMAGE=getsentry/snuba:nightly
-RELAY_IMAGE=getsentry/relay:nightly
-SYMBOLICATOR_IMAGE=getsentry/symbolicator:nightly
+SENTRY_IMAGE=getsentry/sentry:latest
+SNUBA_IMAGE=getsentry/snuba:latest
+RELAY_IMAGE=getsentry/relay:latest
+SYMBOLICATOR_IMAGE=getsentry/symbolicator:latest
 WAL2JSON_VERSION=latest
