--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ x-sentry-defaults: &sentry_defaults
       <<: *depends_on-default
     symbolicator:
       <<: *depends_on-default
-  entrypoint: "/etc/sentry/entrypoint.sh"
+  entrypoint: ["bash", "/etc/sentry/entrypoint.sh"]
   command: ["run", "web"]
   environment:
     PYTHONUSERBASE: "/data/custom-packages"
@@ -328,6 +328,8 @@ services:
     <<: *restart_policy
     ports:
       - "$SENTRY_BIND:80/tcp"
+      - "80:80/tcp"
+      - "443:443"
     image: "nginx:1.21.0-alpine"
     volumes:
       - type: bind
