--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,6 +60,13 @@ http {
 
 	server {
 		listen 80;
+		return 301 https://$host$request_uri;
+	}
+
+	server {
+		listen 443 ssl;
+	ssl_certificate /etc/nginx/ssl/cert.crt;
+	ssl_certificate_key /etc/nginx/ssl/cert.key;
 
 		location /api/store/ {
 			proxy_pass http://relay;
